load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "json.go",
        "yaml.go",
    ],
    importpath = "github.com/btwiuse/pretty",
    visibility = ["//visibility:public"],
    deps = ["@com_github_ghodss_yaml//:go_default_library"],
)
